tests/ui/cfg/both-true-false.stderr
error[E0425]: cannot find function `foo` in this scope
  --> $DIR/both-true-false.rs:13:5
   |
LL |     foo();
   |     ^^^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
